fix: 掴んでいるリストを最前面にするためにz-index

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -49,6 +49,7 @@ html {
       transform: scale(1.06);
       cursor: grabbing;
       transition: left 0s;
+      z-index: 1000;
     }
   }
 }
